# lyra

./: .gitignore  mkdocs.yml  package-lock.json  package.json  pyproject.toml
collections/: test.toml
collections/schemas/: simple.toml
docs/usage/: activities.md
src/lyra/: __main__.py  app.py  models.py  utils.py
src/lyra/inputs/: sdss.py
src/lyra/models/: __init__.py  actions.py  catalog.py  datamodels.py
src/lyra/static/css/: catalog.css  collections.css  main.css  spectra-viewer.css
src/lyra/static/js/: api.js  main.js  router.js  utils.js
src/lyra/static/js/components/: activity-controller.js  catalog.js  collections.js  map-viewer.js  registry.js  spectra-viewer.js
src/lyra/store/: models.py
src/lyra/templates/: base.html  collection_chooser.html  collection_creator.html  collection_table.html  template.html
src/lyra/templates/activities/: feat-verify.html  view.html
src/lyra/templates/catalog/: catalog_chooser.html  catalog_creator.html  catalog_table.html
src/lyra/templates/collection/: collection_creator.html  collection_table.html
src/lyra/templates/spec_viewer/: map_viewer.html  spec_viewer.html
src/lyra/views/: api.py  catalog.py  collections.py  spec_viewer.py
