[project]
name = "lyra"
version = "0.1.0"
description = ""
authors = [
    {name = "galactic-fireball",email = "sdoan2@gmu.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "numpy (>=2.4.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "lyra", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
